# bravosixgoingdark

./: .gitattributes  .gitignore  LICENSE.txt  README.md  b6gd.spec  b6gd_main.py  humansim.spec  humansim_main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
assets/corpus/: journal.txt  notes_general.txt
config/: default.json
src/b6gd/: __init__.py  __main__.py  apps.py  cli.py  config.py  screen.py
src/b6gd/activities/: __init__.py  base.py  browse_folders.py  random_click.py  switch_windows.py  terminal_work.py  watch_video.py  write_note.py
src/b6gd/backends/: __init__.py  dryrun_backend.py  factory.py  ydotool_backend.py
src/b6gd/content/: corpus.py  markov.py
src/b6gd/engine/: clickpoint.py  context.py  executor.py  scheduler.py  session.py
src/b6gd/humanize/: __init__.py  timing.py
src/b6gd/safety/: __init__.py  focus.py  sandbox.py  stopfile.py  takeover.py
src/b6gd/util/: duration.py  logging.py
src/humansim/: __init__.py  __main__.py  apps.py  cli.py  config.py  platform_detect.py
src/humansim/activities/: browse_folders.py  idle.py
src/humansim/backends/: base.py  factory.py  pynput_backend.py
src/humansim/content/: __init__.py  generator.py  templates.py
src/humansim/engine/: session.py
src/humansim/humanize/: mouse.py  typing.py
src/humansim/safety/: control.py  focus.py  killswitch.py  sandbox.py
src/humansim/util/: logging.py
tests/: test_activities.py  test_clickpoint.py  test_control.py  test_duration.py  test_markov.py  test_mouse.py  test_scheduler.py  test_typing.py
