[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "b6gd"
version = "0.6.0"
description = "Lightweight cross-platform human-activity simulator (personal use)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary — personal use only, not for distribution" }
dependencies = [
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
b6gd = "b6gd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
